@@ -1,3 +1,8 @@
+2006-03-23  Steve Frécinaux  <steve@istique.net>
+
+	* plugins/externaltools/tools/functions.py: enable syntax
+	highlighting on the file created by the tool if relevant.
+	
 2006-03-23  Jesse van den Kieboom  <jesse@icecrew.nl>
 
 	* plugins/snippets/snippets/SnippetsLibrary.py: fixes the disappearance
